--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 .bookLibrary {
   text-align: center;
-  padding: 5% 30%;
+  padding: 5% 20%;
 }
 
 #bookForm {
@@ -17,20 +17,21 @@
 #bookAuthor {
   margin-bottom: 1rem;
   width: 50%;
-  padding: .8rem;
+  padding: 0.8rem;
 }
 
 #addBookBtn {
-  padding: .5rem;
+  padding: 0.5rem;
   width: 25%;
+  margin: 1% 0 0 30%;
 }
 
 .library {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 3vh;
+  height: 2vh;
   padding: 1.5rem;
   margin-bottom: 1rem;
-  border: 1px solid
+  border: 1px solid;
 }
